--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -81,14 +81,16 @@ android:background="@color/transparent"
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/nivel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Nivel: Principiante"
+            android:text="Nivel: Undefined"
             android:textAlignment="center"
             android:textColor="@color/text_white"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginVertical="30dp"/>
 
 
             <Button
