--- a/app/src/main/res/layout/activity_cursos_intermedio.xml
+++ b/app/src/main/res/layout/activity_cursos_intermedio.xml
@@ -20,7 +20,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/bg_ground"
+        android:background="#FCA18E53"
         android:orientation="vertical">
 
     <LinearLayout
@@ -32,12 +32,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="25dp"
             android:gravity="center"
-            android:text="Nivel Intermedio"
+            android:text="Cursos de intermedio"
             android:textColor="@color/text_white"
             android:textSize="40sp"
-            android:background="@color/text_black"
+            android:background="#FCDAAB19"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/lyFirst"
             app:layout_constraintEnd_toEndOf="parent"
@@ -136,6 +135,7 @@
                     android:src="@drawable/c_plus_plus_icon" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/lySix"
             android:layout_width="match_parent"
@@ -157,7 +157,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
-                    android:text="Proximamente mas cursos ..."
+                    android:text="Proximamente más cursos ..."
                     android:textColor="@color/text_white"
                     android:layout_margin="15dp"
                     android:fontFamily="@font/rem_regular"
